fix text contrast

--- a/packages/playground/playground/src/dx_components/accordion/style.css
+++ b/packages/playground/playground/src/dx_components/accordion/style.css
@@ -79,7 +79,7 @@
     width: 20px;
     height: 20px;
     fill: none;
-    stroke: var(--secondary-color-4);
+    stroke: black;
     stroke-linecap: round;
     stroke-linejoin: round;
     stroke-width: 2;
